--- a/iindex.html
+++ b/iindex.html
@@ -21,7 +21,7 @@
                     <label for="password">Password</label>
                 </div>
                 <button type="submit" class="login-button">Login</button>
-                <p class="sign-up-text">Don't have an account? <a href="#">Sign up</a></p>
+                <p class="sign-up-text">Rayan? <a href="#">Sign up</a></p>
             </form>
         </div>
     </div>
